Fixed aligning issues on the photos

--- a/style.css
+++ b/style.css
@@ -332,6 +332,13 @@ h1,h2 {
   transform: translateY(-10px);
   .projectDetail {
     display: block;
+
+  }
+  .projectTitle {
+    font-size: 26px;
+  }
+  .projectParagraph {
+    font-size: 18px;
   }
 }
 
@@ -494,7 +501,7 @@ h1,h2 {
   display:none;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1100px) {
 
   .donatelink{
     display:none;
@@ -581,6 +588,12 @@ div.polaroid:hover {
   .eventDetail {
     display: block;
   }
+  .eventTitle {
+    font-size: 26px;
+  }
+  .eventParagraph {
+    font-size: 18px;
+  }
   
 }
 
@@ -595,4 +608,5 @@ div.polaroid:hover {
   color: black;
   padding: 20px;
   box-sizing: border-box;
+  
 }
